# ODO

./: .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.md  README.md
cmake/: FindARMADILLO.cmake  FindIPOPT.cmake  FindXLNT.cmake
data_sets/Power/: DataSpecification.xlsx  ExtraData.xlsx  IEEE13.json  Net.json  ODO_INPUT.xlsx  ODO_INPUT_NREL.xlsx  TimeSeries.xlsx  ~$ODO_INPUT.xlsx
examples/: CMakeLists.txt
examples/MINLP/Power/: Bound.cpp  Bound.h  Bus.cpp  Bus.h  Conductor.cpp  Conductor.h  Gen.cpp  Gen.h  GenCost.h  Line.cpp  Line.h  PowerNet.cpp  PowerNet.h
examples/MINLP/Power/ODO/: ODO_main.cpp
ext_lib/Ipopt/lib/: libcoinasl.la  libcoinblas.1.4.6.dylib  libcoinblas.1.dylib  libcoinblas.la  libcoinblas.so.1  libcoinblas.so.1.4.6  libcoinhsl.1.5.7.dylib  libcoinhsl.dylib  libcoinhsl.la  libcoinhsl.so.1.5.6  libcoinlapack.1.5.6.dylib  libcoinlapack.dylib  libcoinlapack.la  libcoinlapack.so.1.5.6  libcoinmetis.1.3.5.dylib  libcoinmetis.1.dylib  libcoinmetis.la  libcoinmetis.so.1.3.5  libcoinmumps.la  libcoinmumps.so.1.4.7  libcoinmumps.so.1.6.0  libipopt.1.10.10.dylib  libipopt.1.10.11.dylib  libipopt.dylib  libipopt.la  libipopt.so.1  libipopt.so.1.10.10  libipopt.so.1.10.9  libipopt.so.1.9.0
ext_lib/Ipopt/lib/pkgconfig/: coinblas.pc  coinhsl.pc  coinlapack.pc  coinmetis.pc  ipopt.pc
ext_lib/armadillo-10.5.1/: docs.html
ext_lib/armadillo-10.5.1/cmake_aux/Modules/: ARMA_FindBLAS.cmake  ARMA_FindLAPACK.cmake  ARMA_FindOpenBLAS.cmake
ext_lib/cpp_option_parser/: CMakeLists.txt
ext_lib/xlnt-1.3.0/: CMakeCache.txt  Makefile  cmake_install.cmake
ext_lib/xlnt-1.3.0/source/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  xlnt.pc
ext_lib/xlnt-1.3.0/tests/: Makefile  cmake_install.cmake
include/gravity/: Arc.h  BonminProgram.h  GravityConfig.h  IpoptProgram.h  Net.h  Node.h  constant.h  constraint.h  func.h  model.h  param.h  poly.h  solver.h  types.h  utils.h  var.h
src/: Arc.cpp  CMakeLists.txt  Net.cpp  Node.cpp  constraint.cpp  func.cpp  model.cpp  poly.cpp  solver.cpp  utils.cpp  var.cpp
